--- a/pintrst_kw/pubspec.yaml
+++ b/pintrst_kw/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   email_validator: ^2.1.17
   get: ^4.6.5
   google_fonts: ^3.0.1
+  sqflite: ^2.0.2+1
+  path_provider: ^2.0.11
+  firebase_auth: ^3.4.2
 
 dev_dependencies:
   flutter_test:
