--- a/pintrst_kw/pubspec.yaml
+++ b/pintrst_kw/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   sqflite: ^2.0.2+1
   path_provider: ^2.0.11
   firebase_auth: ^3.4.2
+  firebase_core: ^1.24.0
+  firebase_core_platform_interface: ^4.5.1
+  firebase_messaging: ^13.0.4
 
 dev_dependencies:
   flutter_test:
